--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,8 @@ spring:
     password: root
   jackson:
     default-property-inclusion: non_null
+
+
+jwt:
+  secret: "34159e2c-31b0-484d-9305-d45ebc20f34c"
+  expiration: 999999
